@@ -1,3 +1,10 @@
+2010-08-20  Maciej W. Rozycki  <macro@codesourcery.com>
+
+	* pex-common.c (pex_read_err): Set stderr_pipe to -1 if a
+	corresponding stream has been opened.
+	(pex_free): Close pipe file descriptors corresponding to child's
+	stdout and stderr before waiting.
+
 2010-08-13  Nick Clifton  <nickc@redhat.com>
 
 	* argv.c (expandargv): Limit the number of times that response
